--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,36 @@
-<div class="ui inverted footer">
-    <div class="ui container">ChronoSagesse 2023. All Rights Reserved</div>
+<div class="bg-primary-300 mt-auto text-secondary-100 px-10 py-8">
+    <div class="flex justify-between">
+        <div>
+            <h1 class="text-3xl font-bold">ChronoSagesse</h1>
+            <h6 class="max-w-sm text-justify">
+                The latest articles and courses to help you upgrade your skills and learn the latest trends. Master web
+                Development with these amazing resources that are available for free!
+            </h6>
+        </div>
+        <div class="flex gap-8 ">
+            <ul class="capitalize">
+                <li class="hover:text-secondary-100"><a href="/">Home</a></li>
+                <li class="hover:text-secondary-100"><a href="/blogs">Blogs</a></li>
+                <li class="hover:text-secondary-100"><a href="youtube.com">Youtube</a></li>
+            </ul>
+            <ul class="capitalize">
+                <li class="hover:text-secondary-100"><a href="/about">About</a></li>
+                <li class="hover:text-secondary-100"><a href="/contact">contact</a></li>
+                <li class="hover:text-secondary-100"><a href="/privacy">privacy and policy</a></li>
+                <li class="hover:text-secondary-100"><a href="/terms">Terms & Conditions</a></li>
+            </ul>
+            <!-- div. -->
+        </div>
+    </div>
+    <div class="mx-auto w-fit text-3xl">
+        <ul class="flex gap-5">
+            <li><a href="#"><i class="fa-brands fa-discord"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-tiktok"></i></a></li>
+        </ul>
+
+    </div>
+    <div class="mt-10">ChronoSagesse 2023. All Rights Reserved</div>
 </div>
