--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>ChronoSagesse</title>
-
-        <style>
-            body {
-                padding: 50px;
-            }
-        </style>
-    </head>
-    <body class="">
-        <header>
-            <div class="">
-                <a class="item" href="/"> Home </a>
-            </div>
-        </header>
+<header class="bg-gradient-to-r from-primary-300 to-primary-200 sticky top-0 z-50 ">
+    <div class="px-8 py-4 flex justify-between items-center">
+        <a href="/"><h1 class="text-2xl font-bold text-secondary-300">ChronoSagesse</h1></a href="/">
+        <ul class="flex gap-5 capitalize text-lg text-white">
+            <li class="hover:text-secondary-100"><a href="/">Home</a></li>
+            <li class="hover:text-secondary-100"><a href="/blogs">Blogs</a></li>
+            <li class="hover:text-secondary-100"><a href="/about">about</a></li>
+            <li class="hover:text-secondary-100"><a href="/contact">contact</a></li>
+        </ul>
+    </div>
+</header>
