--- a/views/blogs/edit.ejs
+++ b/views/blogs/edit.ejs
@@ -13,7 +13,7 @@
     </select>
     <div>
         <label>blog image</label>
-        <input id="image" type="file" name="image" />
+        <input id="image" type="file" name="image" accept="image/*" />
         <img
             src=" <% if (!isAdd) { %>
             <%-'/uploads/' + image %>
